--- a/ccs/discussion.tex
+++ b/ccs/discussion.tex
@@ -15,8 +15,8 @@ on a Proxy Auto Configuration (PAC) file.
 
 \subsection{Active Measurements + Overreaching Subpoena}
 
-{\bf Spoofing origin server content updates.}
+\paragraph{Spoofing origin server content updates.}
 An attacker who spoofs origin server content updates.
 
-{\bf Guessing attacks.}
+\paragraph{Guessing attacks.}
 An attacker who is attempting to learn if a client is accessing a specific URL or not by submitting requests to see if they match other clients' requests (this should be fixed by adding blinding).
