--- a/ccs/intro.tex
+++ b/ccs/intro.tex
@@ -79,7 +79,7 @@ typically know today, and the types of information we aim to obfuscate.  Section
 \ref{sec:threat} describes the threat model and security objectives for OCDN; based
 on these threats, Section~\ref{sec:design} outlines various design decisions. Section~
 \ref{sec:protocol} describes the protocol for both publishing and retrieving content,
-and Section~\ref{sec:evaluation} evaluates the performance overhead of OCDN. Section~
+and Section~\ref{sec:performance} evaluates the performance overhead of OCDN. Section~
 \ref{sec:discussion} describes various limitations and possible avenues for future
 work, Section~\ref{sec:related} discusses related work, and Section~\ref{sec:conclusion}
 concludes.
