--- a/ccs/analysis.tex
+++ b/ccs/analysis.tex
@@ -8,16 +8,16 @@
 \subsection{Passive Inside Attacker}
 This is also an overreaching subpoena/NSL.
 
-{\bf Inferring content from popularity.}
+\paragraph{Inferring content from popularity.}
 An attacker inferring popularity of content based on the number of accesses and inferring the web page from the popularity.
 
-{\bf Inferring content based on content length.}
+\paragraph{Inferring content based on content length.}
 An attacker who infers the web page from the length of the content (or number of blocks).
 
 \subsection{Active Measurements + Overreaching Subpoena}
 
-{\bf Spoofing origin server content updates.}
+\paragraph{Spoofing origin server content updates.}
 An attacker who spoofs origin server content updates.
 
-{\bf Guessing attacks.}
+\paragraph{Guessing attacks.}
 An attacker who is attempting to learn if a client is accessing a specific URL or not by submitting requests to see if they match other clients' requests (this should be fixed by adding blinding).
