--- a/ccs/design.tex
+++ b/ccs/design.tex
@@ -10,7 +10,7 @@ To prevent an inside attacker or government demanding data from learning informa
 must not have the knowledge of what content it is caching.  Therefore, the content {\it and} the 
 associated URL must be obfuscated before it enters the CDN.  
 
-{\bf Encrypt Content.}  The content can be obfuscated by encrypting it with a key that is not 
+\paragraph{Encrypt Content.}  The content can be obfuscated by encrypting it with a key that is not 
 known to the CDN.  Because this must be done prior to any caching, the content publisher 
 has to generate some key $k$ to encrypt the content with.  Then this encrypted (and subsequently 
 obfuscated) content is then sent to the CDN\footnote{Most CDNs
@@ -21,14 +21,14 @@ associated certificate with the same key $k$.  This content and certificate must
 it leaves the CDN; the client could decrypt the certificate and check its validity.  If valid, then 
 the client uses $k$ to decrypt the content.  
 
-{\bf Obfuscate URL.} Encrypting the content alone does not hide much from the CDN; the content 
+\paragraph{Obfuscate URL.} Encrypting the content alone does not hide much from the CDN; the content 
 identifier, or URL, must also be obfuscated, otherwise the CDN can still reveal information about 
 which clients accessed which URLs (which is indicative of the content).  In obfuscating the 
 URL, the result should be a fixed, and relatively small size.  Hashing the URL provides this 
 property, and hides the actual URL from the CDN. With obfuscated content and 
 URLs, the CDN does not know what content a given client is accessing.
 
-{\bf Client Anonymization.}  The CDN may not know the content that a client is accessing, but it 
+\paragraph{Client Anonymization.}  The CDN may not know the content that a client is accessing, but it 
 still knows information about the clients that are accessing any content at the CDN.  It knows 
 where the clients are located and how many times they are accessing any content.  To address this, 
 a client can simply use an anonymizing proxy or VPN when accessing content.  This hides a certain 
@@ -50,7 +50,7 @@ can be addressed by introducing a closed system of proxies, where a client uses 
 content --- not only does this proxy provide a level of client anonymity, but also decides which jurisdiction 
 the data falls under.  
 
-{\bf Proxy in Client's Jurisdiction.} By replacing the use of an anonymizing proxy or VPN with the use 
+\paragraph{Proxy in Client's Jurisdiction.} By replacing the use of an anonymizing proxy or VPN with the use 
 of a specified proxy, the system can specify which juridiction each client falls under.  For example, 
 each country could have a set of proxies, where all clients in each country use one of the proxies that 
 is located in their country.  This should allow the client's jurisdiction to serve a subpoena for information 
@@ -69,7 +69,7 @@ is much smaller (as the number of proxies is significantly smaller than the numb
 the proxy can perform attack detection and prevention before the attack even reaches the CDN; more optimizations 
 made possible by the use of proxies are discussed in Section \ref{sec:optimizations}.
 
-{\bf Decouple Content Distribution from Decision of Trust.} Using proxies also separates the issues of 
+\paragraph{Decouple Content Distribution from Decision of Trust.} Using proxies also separates the issues of 
 trust and content distribution.  A client no longer needs to trust the CDN, which all other clients would 
 need to trust as well.  Now the client can simply trust the proxy, which interacts with the CDN; this proxy 
 is a completely separate entity from the CDN.  Therefore this design allows a client to decouple these 
@@ -85,7 +85,7 @@ on all proxies.  Second, simply hashing the URL for obfuscation purposes leaves 
 wishes to guess whether the obfuscated URL is a specified plaintext URL or not.  By increasing the number of shared 
 keys $k$ and introducing shared secrets to URL obfuscation, the design reduces the probability of attacks.
 
-{\bf Increasing the Number of Keys.} If a single shared key $k$ associated with a single content publisher gets 
+\paragraph{Increasing the Number of Keys.} If a single shared key $k$ associated with a single content publisher gets 
 compromised, then all proxies have a compromised $k$ for that content publisher.  By increasing the number of shared 
 keys that a content publisher uses to encrypt her content, this decreases the fraction of proxies that use a 
 compromised key given that one of the keys is compromised.  Instead of a content publisher encrypting content with a 
@@ -97,7 +97,7 @@ a tradeoff between security and performance, there should be $n$ keys where $1 <
 proxies share the same shared key $k$ with the content publisher.  If one of these shared keys gets compromised, only that 
 subset of proxies that use that shared key must get a new key.  
 
-{\bf Adding Secrecy to URL Obfuscation.} According to the strawman approach, the URL is obfuscated via hashing.  Unfortunately, 
+\paragraph{Adding Secrecy to URL Obfuscation.} According to the strawman approach, the URL is obfuscated via hashing.  Unfortunately, 
 an attacker could guess what the content identifier is by hashing his guesses and comparing with the hashes stored in the 
 CDNs caches.  To mitigate this vulnerability, the content publisher should incorporate the use of the shared key $k$ in the 
 hash of the URL by using an HMAC.  This provides the property of fixed length identifiers, while obfuscating and preventing 
@@ -107,7 +107,7 @@ The resulting system is the basis of \system{}, and the high-level view of the s
 which can be compared to what CDNs look like today (Figure \ref{fig:basic_cdn}).  The next section describes \system{} in more 
 detail and outlines the specific steps for publishing and retrieving content.
 
-\begin{figure}[h]
+\begin{figure}[t]
 \centering
 \includegraphics[width=.5\textwidth]{full_ocd_system}
 \caption{The relationships between clients, the CDN, proxies, and content publishers in 
