--- a/ccs/paper-alt.tex
+++ b/ccs/paper-alt.tex
@@ -1,5 +1,5 @@
 \documentclass[9pt,twocolumn]{confpaper}
-
+\usepackage{libertine}
 \graphicspath{ {./figures/} }
 
 \newcommand{\system}{Oblivious~CDN}
@@ -7,16 +7,10 @@
 
 \begin{document}
 \date{}
-\title{\ttlfnt OCD: Oblivious Content Distribution}
+\title{\Huge\bf OCD: Oblivious Content Distribution}
 \author{
-{\aufnt Paper \#XX -- \pageref{lastpage} Pages + References} \\
+{\Large Paper \#XX -- \pageref{lastpage} Pages + References} \\
 }
-
-%\author{Anne Edmundson, Roya Ensafi, Nick Feamster, Jennifer Rexford}
-%\affiliation{\institution{Princeton University}}
-%\email{jsmith@affiliation.org}
-
-
 
 \maketitle
 
