--- a/ccs/sigproc.bib
+++ b/ccs/sigproc.bib
@@ -1,5 +1,5 @@
 @article{su2009drafting,
-  title={Drafting behind Akamai: Inferring Network Conditions Cased on CDN Redirections},
+  title={Drafting behind {Akamai}: Inferring Network Conditions Based on {CDN} Redirections},
   author={Su, Ao-Jan and Choffnes, David R and Kuzmanovic, Aleksandar and Bustamante, Fabi{\'a}n E},
   journal={IEEE/ACM Transactions on Networking (TON)},
   volume={17},
@@ -10,7 +10,7 @@
 }
 
 @article{xue2017cdns,
-  title={CDNs Meet CN An Empirical Study of CDN Deployments in China},
+  title={{CDNs} Meet {CN}: An Empirical Study of {CDN} Deployments in China},
   author={Xue, Jingan and Choffnes, David and Wang, Jilong},
   journal={IEEE Access},
   year={2017},
@@ -18,7 +18,7 @@
 }
 
 @inproceedings{gilad2016cdn,
-  title={CDN-on-demand: an affordable DDoS defense via untrusted clouds},
+  title={{CDN}-on-demand: an affordable {DDoS} defense via untrusted clouds},
   author={Gilad, Yossi and Herzberg, Amir and Sudkovitch, Michael and Goberman, Michael},
   booktitle={Network and Distributed Security Symposium (NDSS)},
   year={2016}
@@ -33,7 +33,7 @@
 }
 
 @inproceedings{jung2002flash,
-  title={Flash crowds and denial of service attacks: Characterization and implications for CDNs and web sites},
+  title={Flash crowds and denial of service attacks: Characterization and implications for {CDNs} and web sites},
   author={Jung, Jaeyeon and Krishnamurthy, Balachander and Rabinovich, Michael},
   booktitle={Proceedings of the 11th international conference on World Wide Web},
   pages={293--304},
@@ -42,7 +42,7 @@
 }
 
 @inproceedings{wendell2011going,
-  title={Going viral: flash crowds in an open CDN},
+  title={Going viral: Flash crowds in an open {CDN}},
   author={Wendell, Patrick and Freedman, Michael J},
   booktitle={Proceedings of the 2011 ACM SIGCOMM conference on Internet measurement conference},
   pages={549--558},
@@ -51,7 +51,7 @@
 }
 
 @inproceedings{scott2016satellite,
-  title={Satellite: Joint analysis of CDNs and network-level interference},
+  title={Satellite: Joint analysis of {CDNs} and network-level interference},
   author={Scott, Will and Anderson, Thomas and Kohno, Tadayoshi and Krishnamurthy, Arvind},
   booktitle={2016 USENIX Annual Technical Conference (USENIX ATC 16)},
   pages={195--208},
@@ -69,7 +69,7 @@
 }
 
 @inproceedings{calder2013mapping,
-  title={Mapping the expansion of Google's serving infrastructure},
+  title={Mapping the expansion of {Google's} serving infrastructure},
   author={Calder, Matt and Fan, Xun and Hu, Zi and Katz-Bassett, Ethan and Heidemann, John and Govindan, Ramesh},
   booktitle={Proceedings of the 2013 conference on Internet measurement conference},
   pages={313--326},
@@ -84,7 +84,7 @@
 }
 
 @article{jia2016anonymity,
-  title={Anonymity in Peer-assisted CDNs: Inference Attacks and Mitigation},
+  title={Anonymity in Peer-assisted {CDNs}: Inference Attacks and Mitigation},
   author={Jia, Yaoqi and Bai, Guangdong and Saxena, Prateek and Liang, Zhenkai},
   journal={Proceedings on Privacy Enhancing Technologies},
   volume={2016},
@@ -227,13 +227,13 @@
 }
 
 @misc{predict,
-  title = "{The Zettabyte Era — Trends and Analysis – Cisco}",
+  title = "{The Zettabyte Era -- Trends and Analysis -- Cisco}",
   key = "Zettabyte", 
   howpublished = {\url{http://www.cisco.com/c/en/us/solutions/collateral/service-provider/visual-networking-index-vni/vni-hyperconnectivity-wp.html}}
 }
 
 @inproceedings{su2008thinning,
-  title={Thinning Akamai},
+  title={Thinning {Akamai}},
   author={Su, Ao-Jan and Kuzmanovic, Aleksandar},
   booktitle={Proceedings of the 8th ACM SIGCOMM Conference on Internet Measurement},
   pages={29--42},
@@ -242,7 +242,7 @@
 }
 
 @article{lesniewski2005ssl,
-  title={SSL Splitting: Securely Serving Data from Untrusted Caches},
+  title={{SSL} Splitting: Securely Serving Data from Untrusted Caches},
   author={Lesniewski-Laas, Chris and Kaashoek, M Frans},
   journal={Computer Networks},
   volume={48},
@@ -262,14 +262,14 @@
 }
 
 @article{levy2015stickler,
-  title={Stickler: Defending Against Malicious CDNs in an Unmodified Browser},
+  title={Stickler: Defending Against Malicious {CDNs} in an Unmodified Browser},
   author={Levy, Amit and Corrigan-Gibbs, Henry and Boneh, Dan},
   journal={arXiv preprint arXiv:1506.04110},
   year={2015}
 }
 
 @inproceedings{liang2014https,
-  title={When HTTPS Meets CDN: A Case of Authentication in Delegated Service},
+  title={When {HTTPS} Meets {CDN}: A Case of Authentication in Delegated Service},
   author={Liang, Jinjin and Jiang, Jian and Duan, Haixin and Li, Kang and Wan, Tao and Wu, Jianping},
   booktitle={Security and Privacy (S\&P), 2014 IEEE Symposium on},
   pages={67--82},
