--- a/ccs/performance.tex
+++ b/ccs/performance.tex
@@ -79,7 +79,7 @@ for objects that are smaller than 10MB; objects larger than 10MB take slightly l
 due to the cryptographic operations performed at the proxy.  
 
 Additionally, recent work has reported that the average object size retrieval from Akamai is only 335 Kb, and the average object size 
-of popular objects (> 200,000 requests) is only 8.6 Kb~\cite{berger2016achieving}.  Both of these object sizes are less than 10MB, resulting in negligible 
+of popular objects ($>$ 200,000 requests) is only 8.6 Kb~\cite{berger2016achieving}.  Both of these object sizes are less than 10MB, resulting in negligible 
 performance differences between \system{} and a traditional CDN.
 
 \subsection{Cache Hit Rates}
