--- a/ccs/protocol.tex
+++ b/ccs/protocol.tex
@@ -24,7 +24,7 @@ Figure \ref{fig:publishing} shows the steps taken when publishing content.
 The most important step in content publishing is obfuscating the data.  We assume that the origin 
 server already has a public and private key pair, as well as a certificate.  To obfuscate the data 
 the origin server will need to generate $n$ shared keys, where $n$ should be between 1 and the number of 
-proxies.  We reason about the security of different values of $n$ in Section \ref{sec:analysis}.  
+proxies.  We evaluate the performance tradeoffs of different values of $n$ in Section \ref{sec:performance}.  
 
 Once all keys are established, the publisher must first pad the content to the same size for some 
 range of original content sizes (i.e., if content is between length x and y, then pad it to length 
@@ -42,8 +42,8 @@ CDN.  To increase reliability, performance, and availability, the publisher can 
 multiple CDNs; a publisher can use a service, such as Cedexis~\cite{cedexis}, to load balance between 
 CDNs.  We discuss the use of multiple CDNs more in Section \ref{sec:partial} on \system{} in 
 partial deployment.  Note that each proxy will only be able to fetch a specific replica of the content, that is a 
-specific \{content\}$_{kn}$ for the $n^{th}$ shared key that it holds.  We discuss the security and performance trade offs 
-associated with differing numbers of shared keys and proxies in Sections \ref{sec:analysis} and \ref{sec:performance}.
+specific \{content\}$_{kn}$ for the $n^{th}$ shared key that it holds.  We discuss the performance trade offs 
+associated with differing numbers of shared keys and proxies in Sections \ref{sec:performance}.
 
 %\begin{enumerate}
 %\item Origin generates n shared keys k (origin already has a public key PK and private key PK$^{-1}$)\footnote{$n$ such that $1 < n < |proxies|$} 
@@ -51,7 +51,7 @@ associated with differing numbers of shared keys and proxies in Sections \ref{se
 %\item Cache node pulls HMAC$_{k1}$(URL), \{content\}$_{k1}$, , \{cert\}$_{k1}$, ..., HMAC$_{kn}$(URL), \{content\}$_{kn}$, \{cert\}$_{kn}$\footnote{For more security and reliability, cache nodes from different CDNs can pull this data.  Additionally, an origin server can use something like Cedexis to load balance between CDNs.}
 %\end{enumerate}
 
-\subsubsection{Updating Content}
+{\bf Updating Content}
 For a content publisher to update content, she must follow similar steps as described in publishing content.  
 Once she has updated the content on her origin server, she must obfuscate it using the same steps: 1) padding the 
 original content length, 2) divide the content into fixed size blocks, and 3) encrypt $n$ copies of the content blocks 
