--- a/ccs/threat_model.tex
+++ b/ccs/threat_model.tex
@@ -16,7 +16,7 @@ wishes to learn information that compromises the privacy of content publishers a
 users.  An active attacker that attempts to modify and/or delete data is out of the 
 scope of this work.
 
-In the case of the CDN operator being the adversary, he might try to make inferences. He 
+In the case of the CDN provider being the adversary, he might try to make inferences. He 
 can infer the popularity of content based on the number of accesses and infer the web page 
 from the popularity. Addiitonally, this attacker may be able to infer a web page based on the length of the 
 content.  This adversary could be an inside attacker or an insider who is 
