--- a/ccs/performance.tex
+++ b/ccs/performance.tex
@@ -15,19 +15,19 @@ As content publishers must compute the HMAC$_k$(URL) and \{content\}$_k$, the ac
 takes longer than not having to perform any cryptographic operations.  In this experiment, we analyze the overhead 
 the publisher faces when obfuscating her content.
 
-\subsubsection{Metrics}
+{\bf Metrics}
 When comparing the time to publish using \system{} to a typical CDN, the only difference is the obfuscation of 
 data (as discussed in Section \ref{sec:publish_protocol}).  This results in our analysis simply of the 
 obfuscation; the metric of interest is the total time it takes to encrypt content.  
 
-\subsubsection{Experimental Setup}
+{\bf Experimental Setup}
 In our experiment, we setup a client, a proxy, and an edge server. For this experiment, the only machine necessary is 
 the edge server --- we are not concerned with the amount of time it takes for the content to be transmitted from 
 the publisher's origin server to the edge server, only the amount of time the content publisher takes to obfuscate the data.  Therefore, 
 the content and URL are obfuscated on the edge server, and the time it takes to do these operations is measured.  This 
 measurement is taken for obfuscating the following file sizes: .000001MB, .001MB, .01MB, .1MB, 1.0MB, 10.0MB, and 100.0MB.
 
-\subsubsection{Results}
+{\bf Results}
 The results of time to obfuscate data are shown in Figure \ref{fig:encrypt_time}.  We can see that the overhead 
 is relatively small for file sizes less than 100.0MB.  In addition, this publishing overhead has no performance impact 
 on a client's experience of retrieving, as the client never has to encrypt the content.  
@@ -43,11 +43,11 @@ on a client's experience of retrieving, as the client never has to encrypt the c
 There is also some overhead associated with retrieving objects when using \system{} due to the operations that 
 the proxy must perform.  
 
-\subsubsection{Metrics}
+{\bf Metrics}
 We are interested in measuring the affect of cryptographic functions on the retrieval of single 
 objects.  The metric used to do so is the end-to-end time to download a single object.  
 
-\subsubsection{Experimental Setup}
+{\bf Experimental Setup}
 In our experiment, we setup a client, a proxy, and an edge server.  The client is a  Fujitsu CX2570 M2 servers with dual, 
 14-core 2.4GHz Intel Xeon E5 2680 v4 processors with 384GB RAM running the Springdale distribution of Linux machine, 
 and both the proxy and edge servers are VPSs running Ubuntu 12.04 x64 LTS with 10GB of storage. The proxy is located in 
@@ -73,7 +73,7 @@ and to measure the transfer time.
 \label{fig:transfer}
 \end{figure}
 
-\subsubsection{Results}
+{\bf Results}
 After conducting the experiment, we find the results shown in Figure \ref{fig:transfer}.  We can see that total download times are comparable 
 for objects that are smaller than 10MB; objects larger than 10MB take slightly longer to download using \system{} than a traditional CDN, 
 due to the cryptographic operations performed at the proxy.  
@@ -83,17 +83,17 @@ of popular objects ($>$ 200,000 requests) is only 8.6 Kb~\cite{berger2016achievi
 performance differences between \system{} and a traditional CDN.
 
 \subsection{Cache Hit Rates}
-The other reason for lower performance in \system{} is because there are less copies of the content that a single proxy can request.  As each set 
+The other reason for lower performance in \system{} is because there are fewer copies of the content that a single proxy can request.  As each set 
 of proxies use a different shared key, and these proxies can only request the content encrypted with their shared key, this can lead to high cache misses.  
 This would cause the CDN to fetch the object from the content publisher's server, which increases the latency, and degrades performance for the client.  
 In this experiment, we measure just how much of an impact the number of shared keys has on the cache hit rate.
 
-\subsubsection{Metrics}
+{\bf Metrics}
 In addition to the use of proxies and cryptographic operations, \system{} could suffer performance losses from lower cache hit ratios.  As the number 
 of shared keys (between the proxies and the content publishers' servers) increases, the cache hit ratio will likely decrease.  The metric we are interested 
 in to evaluate the performance impact of multiple shared keys is the cache hit ratio.
 
-\subsubsection{Experimental Setup}
+{\bf Experimental Setup}
 Simulate the cache hit ratio with different numbers of shared keys $k$ ($k$ = 1 to $k$ = 100) when using a cache size of 1.2 GB~\cite{berger2017adaptsize} and a sequence of object requests from ??, where we assume each object to be 100 Kb~\cite{berger2016achieving}.
 
-\subsubsection{Results}
+{\bf Results}
